2005-09-24  Bruno coudoin  <bruno.coudoin@free.fr>

	Integrated new gartoon theme by Franck Doucet
	Original theme from Zeus (zeussama_at_yahoo.com)
	http://art.gnome.org/themes/icon/675/
	Licence DSL
	Design Science License

	Franck gave us 3 new background images for missingletter, money
	and reading. We are lucky.
	
	Integrated Basque sounds by Jone de la Cruz Plazaola (GPL)

	Added a shadows in the text of the menu. Need to be well designed
	for each skin.

	enumerate.c: fixed, was crashing at activity startup
	
	* boards/missing_letter/missingletter-bg.jpg:
	* boards/money/money-bg.png:
	* boards/reading/reading-bg.jpg:
	* boards/skins/babytoy/skin.xml:
	* boards/skins/default/missingletter-bg.jpg:
	* boards/skins/default/money-bg.png:
	* boards/skins/default/reading-bg.jpg:
	* boards/skins/default/skin.xml:
	* boards/skins/gartoon/README:
	* boards/skins/gartoon/about.png:
	* boards/skins/gartoon/bad.png:
	* boards/skins/gartoon/bar_bg.jpg:
	* boards/skins/gartoon/button.png:
	* boards/skins/gartoon/button_backward.png:
	* boards/skins/gartoon/button_checked.png:
	* boards/skins/gartoon/button_exit.png:
	* boards/skins/gartoon/button_forward.png:
	* boards/skins/gartoon/button_large.png:
	* boards/skins/gartoon/button_large2.png:
	* boards/skins/gartoon/button_large_selected.png:
	* boards/skins/gartoon/button_redo.png:
	* boards/skins/gartoon/button_reload.png:
	* boards/skins/gartoon/button_selected.png:
	* boards/skins/gartoon/button_small.png:
	* boards/skins/gartoon/button_small_selected.png:
	* boards/skins/gartoon/button_unchecked.png:
	* boards/skins/gartoon/button_up.png:
	* boards/skins/gartoon/button_up_selected.png:
	* boards/skins/gartoon/config.png:
	* boards/skins/gartoon/difficulty_star1.png:
	* boards/skins/gartoon/difficulty_star2.png:
	* boards/skins/gartoon/difficulty_star3.png:
	* boards/skins/gartoon/difficulty_star4.png:
	* boards/skins/gartoon/difficulty_star5.png:
	* boards/skins/gartoon/difficulty_star6.png: