@@ -1,5 +1,14 @@
 2005-09-24  Bruno coudoin  <bruno.coudoin@free.fr>
 
+	New background image for the clockgame by Franck Doucet.
+
+	* boards/clockgame/clockgame-bg.jpg:
+	* boards/skins/default/clockgame-bg.jpg:
+	* boards/skins/gartoon/clockgame-bg.jpg:
+	* src/boards/clockgame.c: (start_board):
+
+2005-09-24  Bruno coudoin  <bruno.coudoin@free.fr>
+
 	Integrated new gartoon theme by Franck Doucet
 	Original theme from Zeus (zeussama_at_yahoo.com)
 	http://art.gnome.org/themes/icon/675/
